crucible-concurrency/examples/cbl/branch.out.good
Failure for examples/cbl/branch.cbl:33:5: error: in t1
Bad assertion, admittedly
